[gd_scene load_steps=3 format=3 uid="uid://bsc257cro6bkw"]

[ext_resource type="Script" path="res://scripts/jupidon_lab.gd" id="1_rmmb4"]
[ext_resource type="Texture2D" uid="uid://bi0fed6dktiq2" path="res://assets/icon.svg" id="2_8td28"]

[node name="JupidonLab" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0
script = ExtResource("1_rmmb4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 655.0
texture = ExtResource("2_8td28")

[node name="DialogueBox" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -431.0
offset_top = -281.5
offset_right = 439.0
offset_bottom = -198.5
grow_horizontal = 2
grow_vertical = 2
text = "Bienvenue dans le laboratoire de Jupidon ! Trouve la bonne combinaison pour raviver l'amour perdu.

Pour ce faire, tu devra réaliser une solution de clorure de sodium qui produira un gaz qui leur ramenera"
tab_size = 15

[node name="IngredientList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 225.0
offset_right = 256.0
offset_bottom = 591.0

[node name="Ingredient1" type="Button" parent="IngredientList"]
layout_mode = 2
text = "Vinaigre
"

[node name="Ingredient2" type="Button" parent="IngredientList"]
layout_mode = 2
text = "Bicarbonate
"

[node name="Ingredient3" type="Button" parent="IngredientList"]
layout_mode = 2
text = "Eau
"

[node name="Ingredient4" type="Button" parent="IngredientList"]
layout_mode = 2
text = "Acide citrique
"

[node name="Ingredient5" type="Button" parent="IngredientList"]
layout_mode = 2
text = "Citron
"

[node name="MixButton" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 502.0
offset_right = 299.0
offset_bottom = 594.0
text = "Mélanger
"

[node name="Feedback" type="Label" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 463.0
offset_right = 813.0
offset_bottom = 560.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
